[tool.poetry]
name = "dockertest"
version = "0.1.0"
description = ""
authors = ["석민철 <bill@timepercentcorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
